--- a/package.json
+++ b/package.json
@@ -1,37 +1,24 @@
 {
   "name": "effectively-hidden-thunder",
+  "version": "0.1.0",
   "private": true,
-  "version": "1.0.0",
-  "main": "package.json",
-  "license": "UNLICENSED",
   "scripts": {
-    "dev": "sanity dev",
-    "start": "sanity start",
-    "build": "sanity build",
-    "deploy": "sanity deploy",
-    "deploy-graphql": "sanity graphql deploy"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [
-    "sanity"
-  ],
   "dependencies": {
-    "@sanity/vision": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@next/font": "13.1.2",
+    "@sanity/ui": "^1.0.12",
+    "@sanity/vision": "^3.2.3",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.2",
+    "next": "13.1.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-is": "^18.2.0",
-    "sanity": "^3.0.0",
-    "styled-components": "^5.2.0"
-  },
-  "devDependencies": {
-    "@sanity/eslint-config-studio": "^2.0.1",
-    "eslint": "^8.6.0",
-    "prettier": "^2.8.2",
-    "typescript": "^4.0.0"
-  },
-  "prettier": {
-    "semi": false,
-    "printWidth": 100,
-    "bracketSpacing": false,
-    "singleQuote": true
+    "sanity": "^3.2.3",
+    "styled-components": "^5.3.6"
   }
 }
