--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@portabletext/react": "^2.0.0",
+    "@sanity/image-url": "^1.0.1",
     "@sanity/ui": "^1.0.12",
     "@sanity/vision": "^3.2.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
+    "next-sanity": "^4.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
