--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.2",
     "@portabletext/react": "^2.0.0",
+    "@sanity/code-input": "^3.0.1",
     "@sanity/image-url": "^1.0.1",
     "@sanity/ui": "^1.0.12",
     "@sanity/vision": "^3.2.3",
